--- a/03_Day_Specific_Analysis.ipynb
+++ b/03_Day_Specific_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8k+aQHJJ7MwJeTjvij70d",
+      "authorship_tag": "ABX9TyM8vLy7TRMOyNDZxrKz98n9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,6 +318,117 @@
           "text": [
             "Unique combinations for Monday: {(26, 30), (18, 35), (18, 44), (40, 41), (11, 23), (41, 42), (2, 32), (2, 41), (3, 15), (22, 46), (7, 12), (36, 48), (17, 44), (18, 21), (7, 30), (6, 34), (48, 49), (21, 41), (25, 38), (22, 23), (22, 32), (28, 39), (17, 39), (29, 49), (2, 22), (32, 41), (13, 46), (3, 23), (14, 32), (17, 34), (28, 43), (5, 41), (17, 43), (29, 35), (21, 49), (39, 48), (2, 35), (32, 36), (13, 32), (24, 32), (13, 41), (24, 41), (3, 18), (1, 48), (17, 29), (36, 42), (9, 25), (5, 36), (9, 34), (6, 10), (9, 43), (29, 30), (39, 43), (20, 48), (12, 44), (2, 30), (13, 27), (35, 36), (1, 34), (43, 49), (1, 43), (9, 11), (5, 22), (36, 37), (5, 31), (28, 33), (28, 42), (6, 23), (42, 44), (31, 34), (20, 34), (31, 43), (2, 7), (23, 39), (23, 48), (4, 44), (13, 22), (16, 18), (1, 29), (1, 47), (5, 17), (17, 28), (5, 26), (23, 25), (12, 25), (20, 38), (23, 34), (4, 39), (1, 15), (13, 26), (32, 39), (16, 31), (13, 44), (1, 42), (5, 12), (5, 21), (5, 39), (27, 45), (30, 41), (8, 41), (23, 29), (4, 25), (23, 38), (12, 38), (4, 34), (4, 43), (1, 28), (13, 30), (1, 37), (1, 46), (26, 48), (5, 25), (7, 44), (30, 36), (11, 32), (4, 29), (23, 42), (1, 5), (34, 48), (1, 23), (1, 32), (15, 34), (15, 43), (18, 39), (18, 48), (27, 35), (27, 44), (20, 23), (20, 32), (12, 28), (23, 28), (23, 37), (22, 41), (1, 18), (37, 39), (5, 6), (15, 38), (7, 34), (15, 47), (11, 13), (27, 39), (11, 22), (30, 35), (8, 44), (12, 23), (4, 28), (1, 4), (1, 13), (3, 41), (14, 41), (7, 38), (18, 38), (11, 17), (19, 30), (8, 30), (33, 41), (4, 5), (22, 31), (22, 40), (37, 38), (22, 49), (14, 45), (15, 19), (29, 39), (29, 48), (33, 36), (25, 32), (44, 45), (25, 41), (2, 39), (3, 13), (3, 22), (3, 31), (14, 31), (3, 49), (14, 49), (15, 23), (15, 32), (26, 32), (29, 43), (2, 25), (25, 27), (25, 45), (22, 39), (36, 41), (15, 18), (18, 23), (6, 36), (10, 15), (2, 29), (22, 25), (3, 30), (36, 45), (5, 48), (40, 42), (10, 19), (25, 26), (2, 33), (32, 34), (25, 35), (24, 39), (35, 39), (13, 48), (36, 40), (36, 49), (28, 45), (9, 41), (10, 32), (32, 38), (3, 11), (5, 20), (17, 22), (9, 18), (17, 31), (5, 38), (6, 30), (6, 39), (39, 45), (31, 41), (2, 23), (13, 20), (1, 27), (1, 36), (9, 22), (9, 31), (27, 48), (6, 25), (20, 36), (20, 45), (23, 41), (13, 15), (1, 22), (43, 46), (13, 42), (5, 10), (46, 48), (9, 17), (5, 28), (28, 30), (30, 39), (8, 39), (30, 48), (23, 36), (31, 49), (23, 45), (1, 8), (4, 41), (1, 17), (35, 37), (1, 35), (5, 14), (5, 23), (9, 21), (5, 32), (8, 25), (27, 38), (30, 34), (30, 43), (11, 39), (4, 18), (12, 31), (23, 31), (31, 44), (23, 40), (1, 3), (12, 40), (1, 12), (13, 23), (1, 21), (1, 39), (15, 41), (5, 18), (19, 20), (8, 20), (8, 38), (11, 34), (11, 43), (23, 26), (31, 39), (23, 35), (4, 31), (23, 44), (1, 7), (22, 48), (15, 27), (5, 13), (18, 32), (26, 45), (18, 41), (7, 41), (8, 15), (27, 28), (8, 24), (11, 47), (41, 48), (20, 25), (12, 30), (25, 49), (22, 34), (22, 43), (1, 20), (3, 48), (15, 31), (18, 45), (27, 32), (11, 15), (33, 39), (3, 34), (14, 34), (3, 43), (18, 22), (7, 22), (18, 31), (18, 49), (29, 46), (33, 34), (41, 47), (25, 30), (4, 7), (25, 39), (2, 46), (25, 48), (7, 8)}\n",
             "Unique combinations for Thursday: {(32, 37), (10, 34), (1, 31), (42, 48), (7, 26), (10, 43), (26, 39), (33, 45), (16, 29), (24, 42), (35, 42), (16, 38), (16, 47), (31, 38), (6, 48), (11, 14), (20, 47), (4, 30), (31, 47), (37, 42), (4, 48), (10, 27), (27, 43), (33, 38), (10, 36), (7, 19), (18, 19), (8, 48), (10, 45), (33, 47), (24, 44), (19, 48), (16, 40), (18, 37), (11, 44), (3, 24), (40, 43), (22, 37), (6, 41), (14, 33), (20, 49), (4, 32), (21, 48), (9, 28), (3, 42), (14, 42), (27, 36), (13, 19), (19, 32), (1, 26), (41, 44), (7, 21), (24, 37), (11, 37), (10, 47), (9, 49), (33, 49), (2, 43), (16, 42), (29, 36), (31, 33), (39, 46), (12, 29), (14, 26), (31, 42), (3, 26), (12, 47), (1, 10), (3, 44), (10, 22), (13, 21), (19, 34), (10, 31), (7, 14), (27, 47), (25, 29), (2, 27), (17, 46), (3, 10), (5, 7), (6, 27), (20, 26), (38, 41), (12, 22), (31, 35), (21, 34), (3, 28), (40, 47), (21, 43), (14, 37), (3, 37), (27, 31), (10, 24), (19, 36), (8, 36), (17, 48), (5, 46), (42, 47), (8, 45), (10, 42), (3, 12), (46, 47), (21, 27), (26, 41), (6, 38), (29, 40), (20, 37), (4, 20), (12, 33), (6, 47), (14, 21), (9, 16), (7, 46), (13, 16), (2, 13), (4, 47), (10, 26), (45, 48), (24, 25), (37, 44), (16, 21), (33, 37), (7, 9), (9, 37), (2, 31), (16, 30), (10, 44), (9, 46), (30, 38), (2, 40), (25, 42), (42, 49), (8, 47), (20, 21), (6, 31), (24, 46), (21, 29), (12, 26), (21, 38), (4, 40), (34, 41), (13, 18), (8, 31), (19, 31), (9, 30), (37, 46), (10, 37), (11, 45), (3, 7), (26, 36), (3, 16), (4, 15), (21, 31), (7, 32), (6, 42), (3, 25), (16, 44), (21, 40), (15, 45), (38, 47), (4, 33), (19, 24), (10, 21), (11, 20), (9, 32), (37, 48), (27, 46), (6, 8), (10, 39), (11, 38), (6, 17), (15, 29), (3, 9), (32, 45), (7, 25), (6, 26), (38, 40), (21, 24), (16, 37), (29, 37), (21, 33), (12, 21), (6, 44), (16, 46), (18, 43), (19, 29), (17, 20), (4, 35), (10, 14), (31, 46), (20, 46), (2, 10), (28, 38), (19, 35), (2, 19), (28, 47), (19, 44), (11, 40), (2, 37), (7, 18), (6, 28), (43, 47), (4, 10), (21, 26), (44, 46), (6, 37), (16, 39), (26, 40), (18, 36), (37, 49), (6, 46), (7, 45), (20, 39), (10, 16), (3, 32), (31, 48), (34, 47), (45, 47), (8, 28), (37, 43), (2, 21), (28, 40), (11, 24), (19, 37), (11, 33), (17, 49), (4, 49), (6, 12), (15, 24), (32, 40), (24, 36), (15, 33), (12, 16), (7, 29), (18, 29), (21, 28), (10, 46), (18, 47), (7, 47), (2, 5), (19, 21), (8, 21), (10, 18), (11, 26), (17, 42), (5, 40), (4, 42), (15, 17), (32, 33), (7, 13), (24, 29), (13, 29), (15, 26), (16, 25), (24, 38), (15, 35), (25, 37), (4, 14), (7, 31), (2, 44), (7, 49), (10, 11), (20, 43), (17, 35), (5, 33), (37, 47), (3, 45), (6, 7), (9, 40), (6, 16), (24, 31), (15, 28), (42, 46), (13, 40), (26, 37), (4, 16), (16, 45), (20, 27), (22, 24), (14, 20), (3, 20), (14, 29), (31, 45), (19, 25), (21, 44), (12, 41), (11, 21), (3, 29), (4, 37), (37, 40), (11, 30)}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import combinations\n",
+        "\n",
+        "# Generate pairs from the numbers\n",
+        "def get_combinations(data, combination_size=2):\n",
+        "    return data.apply(lambda row: list(combinations(row, combination_size)), axis=1)\n",
+        "\n",
+        "monday_data['Pairs'] = get_combinations(monday_data[['Draw number 1', 'Draw number 2', 'Draw number 3', 'Draw number 4', 'Draw number 5', 'Draw number 6']])\n",
+        "thursday_data['Pairs'] = get_combinations(thursday_data[['Draw number 1', 'Draw number 2', 'Draw number 3', 'Draw number 4', 'Draw number 5', 'Draw number 6']])\n",
+        "\n",
+        "# Count the occurrences of each pair\n",
+        "monday_pairs_frequency = monday_data['Pairs'].explode().value_counts()\n",
+        "thursday_pairs_frequency = thursday_data['Pairs'].explode().value_counts()\n",
+        "\n",
+        "print(\"Most common pairs on Monday:\\n\", monday_pairs_frequency.head())\n",
+        "print(\"\\nMost common pairs on Thursday:\\n\", thursday_pairs_frequency.head())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mkENqaFs1lfx",
+        "outputId": "2d3f3439-37f6-4610-dc17-1ab7642b211a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Most common pairs on Monday:\n",
+            " (25, 32)    4\n",
+            "(1, 15)     3\n",
+            "(22, 49)    3\n",
+            "(22, 43)    3\n",
+            "(5, 49)     3\n",
+            "Name: Pairs, dtype: int64\n",
+            "\n",
+            "Most common pairs on Thursday:\n",
+            " (14, 21)    3\n",
+            "(6, 31)     3\n",
+            "(42, 46)    3\n",
+            "(16, 37)    3\n",
+            "(21, 37)    3\n",
+            "Name: Pairs, dtype: int64\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-20-5c2f6b1979c4>:7: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  monday_data['Pairs'] = get_combinations(monday_data[['Draw number 1', 'Draw number 2', 'Draw number 3', 'Draw number 4', 'Draw number 5', 'Draw number 6']])\n",
+            "<ipython-input-20-5c2f6b1979c4>:8: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  thursday_data['Pairs'] = get_combinations(thursday_data[['Draw number 1', 'Draw number 2', 'Draw number 3', 'Draw number 4', 'Draw number 5', 'Draw number 6']])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Finding pairs unique to Mondays or Thursdays\n",
+        "unique_monday_pairs = monday_pairs_frequency.index.difference(thursday_pairs_frequency.index)\n",
+        "unique_thursday_pairs = thursday_pairs_frequency.index.difference(monday_pairs_frequency.index)\n",
+        "\n",
+        "print(\"Pairs unique to Monday:\\n\", unique_monday_pairs)\n",
+        "print(\"\\nPairs unique to Thursday:\\n\", unique_thursday_pairs)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8hNHToej1qlU",
+        "outputId": "8cc4ed5b-9583-4c1f-b51e-fd6fbcdf41f6"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pairs unique to Monday:\n",
+            " Index([  (1, 3),   (1, 4),   (1, 5),   (1, 6),   (1, 7),   (1, 8),  (1, 13),\n",
+            "        (1, 15),  (1, 17),  (1, 18),\n",
+            "       ...\n",
+            "       (39, 45), (40, 41), (40, 42), (41, 42), (41, 47), (42, 44), (42, 45),\n",
+            "       (43, 49), (44, 45), (48, 49)],\n",
+            "      dtype='object', length=279)\n",
+            "\n",
+            "Pairs unique to Thursday:\n",
+            " Index([ (1, 10),  (1, 26),  (1, 30),  (1, 31),   (2, 5),   (2, 6),  (2, 19),\n",
+            "        (2, 21),  (2, 24),  (2, 31),\n",
+            "       ...\n",
+            "       (41, 44), (42, 46), (42, 47), (42, 48), (42, 49), (43, 47), (44, 46),\n",
+            "       (45, 47), (46, 47), (46, 49)],\n",
+            "      dtype='object', length=260)\n"
           ]
         }
       ]
